Fix cards, update spacings

--- a/app/javascript/stylesheets/getitnow.scss
+++ b/app/javascript/stylesheets/getitnow.scss
@@ -70,13 +70,6 @@
   box-shadow: 0 0 0 2px white, 0 0 0 3px #616161;
 }
 
-.card {
-  z-index: 0;
-  border: none;
-  border-radius: 0.5rem;
-  position: relative;
-}
-
 .fs-title {
   font-size: 25px;
   color: #2c3e50;
